refactor(install): use static installer redirects and rename scripts

--- a/website/src/pages/docs/install.astro
+++ b/website/src/pages/docs/install.astro
@@ -1,7 +1,7 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import cliScript from "../../../public/install?raw";
-import serverScript from "../../../public/install-server?raw";
+import cliScript from "../../../../scripts/install-tako-cli.sh?raw";
+import serverScript from "../../../../scripts/install-tako-server.sh?raw";
 ---
 <DocsLayout title="Tako Docs - Install" heading="install">
   <p>Install Tako CLI on your local machine:</p>
