chore(repo): revamp website/docs UI and update project docs

--- a/website/src/pages/docs/development.astro
+++ b/website/src/pages/docs/development.astro
@@ -1,9 +1,9 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import doc from "../../../../docs/guides/development.md?raw";
+import DevelopmentDoc from "../../../../docs/guides/development.md";
 ---
 <DocsLayout title="Tako Docs - Development" heading="development">
   <p>Rendered from: <code>docs/guides/development.md</code>.</p>
   <p><a href="/docs">← docs</a></p>
-  <pre>{doc}</pre>
+  <DevelopmentDoc />
 </DocsLayout>
