--- a/website/src/pages/docs/operations.astro
+++ b/website/src/pages/docs/operations.astro
@@ -1,9 +1,9 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import doc from "../../../../docs/guides/operations.md?raw";
+import OperationsDoc from "../../../../docs/guides/operations.md";
 ---
 <DocsLayout title="Tako Docs - Operations" heading="operations">
   <p>Rendered from: <code>docs/guides/operations.md</code>.</p>
   <p><a href="/docs">← docs</a></p>
-  <pre>{doc}</pre>
+  <OperationsDoc />
 </DocsLayout>
