--- a/website/src/pages/docs/architecture.astro
+++ b/website/src/pages/docs/architecture.astro
@@ -1,9 +1,9 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import doc from "../../../../docs/architecture/overview.md?raw";
+import ArchitectureDoc from "../../../../docs/architecture/overview.md";
 ---
 <DocsLayout title="Tako Docs - Architecture" heading="architecture">
   <p>Rendered from: <code>docs/architecture/overview.md</code>.</p>
   <p><a href="/docs">← docs</a></p>
-  <pre>{doc}</pre>
+  <ArchitectureDoc />
 </DocsLayout>
