--- a/website/src/pages/docs/deployment.astro
+++ b/website/src/pages/docs/deployment.astro
@@ -1,9 +1,9 @@
 ---
 import DocsLayout from "../../layouts/DocsLayout.astro";
-import doc from "../../../../docs/guides/deployment.md?raw";
+import DeploymentDoc from "../../../../docs/guides/deployment.md";
 ---
 <DocsLayout title="Tako Docs - Deployment" heading="deployment">
   <p>Rendered from: <code>docs/guides/deployment.md</code>.</p>
   <p><a href="/docs">← docs</a></p>
-  <pre>{doc}</pre>
+  <DeploymentDoc />
 </DocsLayout>
